# kisdnnet

kisdnnet/: .cvsignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  README  configure.in.in  kisdnnet.kdevelop  kisdnnet.kdevses
kisdnnet/admin/: am_edit
kisdnnet/cardpool/: Makefile.am  avm_classic.conf
kisdnnet/doc/: Makefile.am
kisdnnet/doc/en/: Makefile.am  index.docbook
kisdnnet/kdialer/: .cvsignore  Makefile.am  csystemtray.cpp  csystemtray.h  dialindlg.ui  info.ui  kdialer.cpp  kdialer.h  main.cpp
kisdnnet/kdialercontrol/: Makefile.am  ipppmap.cpp  ipppmap.h  isp.cpp  isp.h  ispedit.ui  ispwizard.ui  kcmwidget.ui  kdialercontrol.cpp  kdialercontrol.desktop  kdialercontrol.h
kisdnnet/kisdnnetcontrol/: .cvsignore  Makefile.am  hardwaredlg.ui  hardwaredlg.ui.h  kcmwidget.ui  kisdnnetcontrol.cpp  kisdnnetcontrol.desktop  kisdnnetcontrol.h
kisdnnet/src/: .cvsignore  Makefile.am  card.cpp  card.h  carddialog.ui  ipppmap.cpp  isp.cpp  isp.h  ispedit.ui  kisdnnet.cpp  kisdnnet.desktop  kisdnnet.h  kisdnnet.lsm  kisdnnetiface.h  kisdnnetui.rc  kisdnnetview.cpp  kisdnnetview.h  main.cpp  networkwizard.ui  pref.cpp  pref.h
kisdnnet/templates/: cpp
